<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/topView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/testView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/FirstView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/FirstView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/TrueButton"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_primary"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/TrueButton" />
    <Button
        android:id="@+id/FalseButton"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_primary"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/FalseButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/PreviousButton"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_primary"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:icon = "@drawable/left_arrow"
            app:iconGravity ="start"
            android:text="@string/PreviousButton" />
        <Button
            android:id="@+id/NextButton"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_primary"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:icon ="@drawable/right_arrow"
            app:iconGravity = "end"
            android:text="@string/NextButton" />
    </LinearLayout>

</LinearLayout>